--- a/scss/common/_admin.scss
+++ b/scss/common/_admin.scss
@@ -166,9 +166,9 @@
   }
 }
 
-.badges,
-.groups,
-.web-hook-container {
+div.badges,
+div.groups,
+div.web-hook-container {
   margin-bottom: $card-inner-spacer-y;
 
   .form-horizontal {
@@ -205,7 +205,7 @@
   }
 }
 
-.badges {
+div.badges {
   .admin-contents & {
     align-items: flex-start;
     display: flex;
@@ -552,7 +552,7 @@ div.emoji {
   margin-bottom: $spacer-sm;
 }
 
-.groups {
+div.groups {
   .admin-contents & {
     align-items: flex-start;
     display: flex;
