--- a/scss/common/_reply.scss
+++ b/scss/common/_reply.scss
@@ -194,7 +194,7 @@
   #draft-status {
     background-color: transparent;
     color: unquote('$tertiary');
-    font-size: .857142857em;
+    font-size: $font-size-small;
     margin-right: $spacer-sm;
     margin-bottom: $spacer-sm;
     right: 50%;
