--- a/scss/common/_base.scss
+++ b/scss/common/_base.scss
@@ -53,7 +53,7 @@ strong {
 }
 
 blockquote {
-  @include typography-h5;
+  @extend %typography-h5;
 
   background-color: color-chooser($card-child-bg-dark, $card-child-bg-light);
   border-left: 0;
@@ -115,28 +115,80 @@ h6 {
   }
 }
 
-h1 {
-  @include typography-h1;
+%typography-display-1 {
+  font-size: $font-size-display-1;
+  font-weight: $font-weight-display-1;
+  letter-spacing: $letter-spacing-display-1;
+  line-height: $line-height-display-1;
 }
 
-h2 {
-  @include typography-h2;
+%typography-display-2 {
+  font-size: $font-size-display-2;
+  font-weight: $font-weight-display-2;
+  letter-spacing: $letter-spacing-display-2;
+  line-height: $line-height-display-2;
 }
 
-h3 {
-  @include typography-h3;
+h1,
+%typography-h1 {
+  font-size: $font-size-h1;
+  font-weight: $font-weight-h1;
+  letter-spacing: $letter-spacing-h1;
+  line-height: $line-height-h1;
 }
 
-h4 {
-  @include typography-h4;
+h2,
+%typography-h2 {
+  font-size: $font-size-h2;
+  font-weight: $font-weight-h2;
+  letter-spacing: $letter-spacing-h2;
+  line-height: $line-height-h2;
 }
 
-h5 {
-  @include typography-h5;
+h3,
+%typography-h3 {
+  font-size: $font-size-h3;
+  font-weight: $font-weight-h3;
+  letter-spacing: $letter-spacing-h3;
+  line-height: $line-height-h3;
 }
 
-h6 {
-  @include typography-h6;
+h4,
+%typography-h4 {
+  font-size: $font-size-h4;
+  font-weight: $font-weight-h4;
+  letter-spacing: $letter-spacing-h4;
+  line-height: $line-height-h4;
+}
+
+h5,
+%typography-h5 {
+  font-size: $font-size-h5;
+  font-weight: $font-weight-h5;
+  letter-spacing: $letter-spacing-h5;
+  line-height: $line-height-h5;
+}
+
+h6,
+%typography-h6 {
+  font-size: $font-size-h6;
+  font-weight: $font-weight-h6;
+  letter-spacing: $letter-spacing-h6;
+  line-height: $line-height-h6;
+}
+
+%typography-body {
+  font-size: $font-size-body;
+  font-weight: $font-weight-body;
+  letter-spacing: $letter-spacing-body;
+  line-height: $line-height-body;
+}
+
+%typography-caption {
+  font-size: $font-size-caption;
+  font-weight: $font-weight-caption;
+  letter-spacing: $letter-spacing-caption;
+  line-height: $line-height-caption;
 }
 
 ol,
@@ -161,7 +213,7 @@ small {
 
 sub,
 sup {
-  font-size: 75%;
+  font-size: $font-size-small;
   line-height: 0;
   position: relative;
   vertical-align: baseline;
