--- a/scss/common/_reply.scss
+++ b/scss/common/_reply.scss
@@ -3,6 +3,17 @@
   box-shadow: $dropdown-box-shadow;
   display: flex;
   flex-direction: column;
+  max-width: $container-max-width;
+  right: 0;
+
+  @media (min-width: ($container-max-width + 1)) {
+    border-radius: ($dropdown-border-radius * 2) ($dropdown-border-radius * 2) 0 0;
+    right: 1px;
+  }
+
+  @media (min-width: ($container-max-width + $spacer-lg * 2)) {
+    right: $spacer-lg;
+  }
 
   &.draft {
     border-top: 0;
@@ -97,6 +108,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    min-width: $container-max-width;
     padding: 0;
 
     .control {
@@ -214,6 +226,10 @@
     justify-content: center;
     padding: 0;
 
+    @media (min-width: ($container-max-width + 1)) {
+      border-radius: $dropdown-border-radius $dropdown-border-radius 0 0;
+    }
+
     &::before {
       @extend %material-icons;
 
@@ -330,6 +346,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    max-width: 100%;
     position: static;
 
     .d-editor,
